@@ -14,6 +14,7 @@ TODO
     - Integrate rb_thread_blocking_region where we can in your extension for proper threading in 1.9.2
     
   * Result Set
+    - Use dbretstatus to get back execute procedure return code.
     - See if we can make a binary string of [timestamp] type.
     - Multiple Result Sets
     - Error & Message Handling
@@ -24,3 +25,12 @@ TODO
       • See the dbsetuserdata reference page for an example of how to handle deadlock in this way.
     - Test large data set in wchars
     - See if wchar max is only supported in newer FreeTDS
+
+
+NOTES:
+
+* We keep tinytds_client_userdata->closed and tinytds_client_wrapper->closed in sync so we 
+  can examine this in message and error handling where the client wrapper is not available 
+  and only user data is.
+
+* 
