@@ -5,11 +5,19 @@
 void init_tinytds_client();
 
 typedef struct {
+  short int closed;
+  short int timing_out;
+  short int dbsqlok_sent;
+  short int dbcancel_sent;
+} tinytds_client_userdata;
+
+typedef struct {
   LOGINREC *login;
   RETCODE return_code;
   DBPROCESS *client;
   short int closed;
   VALUE charset;
+  tinytds_client_userdata *userdata;
   #ifdef HAVE_RUBY_ENCODING_H
     rb_encoding *encoding;
   #endif
